# holler

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-freeswitch-voice-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-telecom-abstraction-compliance/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/freeswitch/: vars.xml
docker/: docker-compose.yml
docker/freeswitch/: Dockerfile
holler/: config.py  main.py
holler/cli/: __init__.py  commands.py
holler/countries/: __init__.py
tests/: test_agent.py  test_audit_log.py  test_cli.py  test_compliance_gateway.py  test_consent_db.py  test_dnc.py  test_integration_phase2.py  test_jurisdiction_router.py  test_number_pool.py  test_phase5_wiring.py  test_recording.py  test_sms.py  test_telecom_types.py  test_tool_pipeline.py  test_us_compliance.py
tests/integration/: test_voice_loop.py
tests/unit/: test_esl.py  test_resampling.py  test_vad.py
(+67 files in other folders)
