[project]
name = "holler"
version = "0.1.0"
description = "Open-source voice and text infrastructure for autonomous AI agents"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "genesis>=2026.3.21",
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.5.0",
    "soxr>=0.3.7",
    "websockets>=12.0",
    "openai>=1.0",
    "redis>=5.0",
    "numpy>=1.26",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sounddevice>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
